
- allow links containing only version and page file name (#405)
- check links even when anchor contains an unresolvable attribute
- given an Antora partial and a local anchor, search the complete project for a reference when trying to resolve it
- avoid NPE when an Antora component descriptor doesn't include a version (#460)
- check links for files in block, inline and preprocessor macros

=== 0.30.59

- rebuild indexes for bibliographic references (#459)

=== 0.30.58 (preview, available from GitHub releases)

- support bibliographic references when validating links and finding references (#459)
- when an Antora xref contains a component name, it will always link to the "`latest`" version (#405)

=== 0.30.57

- re-enable setting of attributes in plugin settings on IntelliJ 2020.1+ (#458)

=== 0.30.56 (preview, available from GitHub releases)

- support PlantUML diagrams in open blocks
- fixing support for distributed Antora components when linking to a "`latest`" version (#405)

=== 0.30.55 (preview, available from GitHub releases)

- handling linking and including to "`latest`" version on Antora projects (#405)

=== 0.30.54 (preview, available from GitHub releases)

- improving performance when editing large tables (#453)

=== 0.30.53 (preview, available from GitHub releases)

- fixing performance regression when editing large documents (#453)

=== 0.30.52 (preview, available from GitHub releases)

- avoid confusion in lexer about starting and ending listings if there are blanks in a line starting with dashes
- avoid infinite recursion with too many attributes in anchors
- allow fully distributed components for Antora, where files for a module exist in multiple folders (#405)
- fix directories for antora modules to be resolved to wrong path
- don't try to resolve links traversing to a parent directory
- support version numbers and attributes in Antora xrefs (#377)

=== 0.30.51 (preview, available from GitHub releases)
